# dvc-pipeline

./: .gitignore  README.md  dvc.yaml  main.py  mlflow.db  mlruns.db  params.yaml  pyproject.toml
dvc_plots/: index.html
dvclive/: metrics.json
dvclive/plots/metrics/: accuracy.tsv  precision.tsv  recall.tsv
mlruns/1/5e991a95c9424319aa8a72fff7dd1909/artifacts/: metrics_epoch_7.json
mlruns/1/f36cb8149b054d96bc422ae5e078fbd6/artifacts/: metrics_20250917_103225.json
mlruns/1/models/m-143171c19841455d8994083900c5fb8c/artifacts/: MLmodel
mlruns/1/models/m-8795282267344abb813c49ca5f90b153/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-c4337dc9b97447ab92fd36caa9ae6e67/artifacts/: MLmodel  model.pkl  python_env.yaml
outputs/: .gitignore
src/: data_loading.py  dvc.yaml  main.py  params.yaml  preprocessing.py  splitting.py  training.py  utils.py
